--- a/_infra/K8s/manifests/dispatch-pod.yaml
+++ b/_infra/K8s/manifests/dispatch-pod.yaml
@@ -10,7 +10,7 @@ spec:
   containers:
   - env:
     - name: NEW_RELIC_APP_NAME
-      value: cart-service-$DATACENTER,cart-service
+      value: dispatch-service-$DATACENTER;dispatch-service
     - name: NEW_RELIC_LICENSE_KEY
       value: $NEW_RELIC_LICENSE_KEY
     - name: NEW_RELIC_DISTRIBUTED_TRACING_ENABLED
