--- a/newrelic-integrations/k8s-nri-rabbitmq-latest.yaml
+++ b/newrelic-integrations/k8s-nri-rabbitmq-latest.yaml
@@ -20,26 +20,18 @@ spec:
       mountPath: /etc
     resources: {}
   initContainers:
-  - env:
-    - name: REPO
-    - value: $REPO
-    name: install
+  - name: install
     image: busybox
-    command:
-    - mkdir
-    - "/work-dir/newrelic-infra"
-    - "/work-dir/newrelic-infra/integrations.d"
-    - "&&"
-    - "wget -sO /tmp/config"
-    - "https://github.com/$REPO/robot-shop/blob/master/newrelic-integrations/k8s-nri-rabbitmq-config.sh"
-    - "&&"
-    - "."
-    - "/tmp/config"
+    env:
+    - name: CONFIG_SCRIPT
+      value: "https://github.com/$REPO/robot-shop/blob/master/newrelic-integrations/k8s-nri-rabbitmq-config.sh"
+    command: ["/bin/sh","-c"]
+    args: ["mkdir -p /work-dir/newrelic-infra/integrations.d && wget -sO /tmp/config https://github.com/$REPO/robot-shop/blob/master/newrelic-integrations/k8s-nri-rabbitmq-config.sh"]
     volumeMounts:
-    - name: workdir
+    - name: work-dir
       mountPath: "/work-dir"
   volumes:
-  - name: workdir
+  - name: work-dir
     emptyDir: {}
   restartPolicy: OnFailure
 status: {}
