--- a/_infra/K8s/manifests/dispatch-pod.yaml
+++ b/_infra/K8s/manifests/dispatch-pod.yaml
@@ -19,7 +19,7 @@ spec:
       value: datacenter:$DATACENTER;service:dispatch
     - name: AMQP_HOST
       value: rabbitmq-$DATACENTER
-    image: $REPO/rs-dispatch:$TAG
+    image: $GITHUB_USER/rs-dispatch:$TAG
     name: dispatch
     ports:
     - containerPort: 8080
