--- a/_infra/K8s/manifests/cart-pod.yaml
+++ b/_infra/K8s/manifests/cart-pod.yaml
@@ -41,7 +41,7 @@ spec:
       valueFrom:
         fieldRef:
           fieldPath: metadata.namespace
-    image: $REPO/rs-cart:$TAG
+    image: $GITHUB_USER/rs-cart:$TAG
     name: cart
     ports:
     - containerPort: 8080
