--- a/_infra/K8s/manifests/catalogue-pod.yaml
+++ b/_infra/K8s/manifests/catalogue-pod.yaml
@@ -39,7 +39,7 @@ spec:
       valueFrom:
         fieldRef:
           fieldPath: metadata.namespace
-    image: $REPO/rs-catalogue:$TAG
+    image: $GITHUB_USER/rs-catalogue:$TAG
     name: catalogue
     ports:
     - containerPort: 8080
