--- a/_infra/K8s/manifests/payment-pod.yaml
+++ b/_infra/K8s/manifests/payment-pod.yaml
@@ -43,7 +43,7 @@ spec:
       valueFrom:
         fieldRef:
           fieldPath: metadata.namespace
-    image: $REPO/rs-payment:$TAG
+    image: $GITHUB_USER/rs-payment:$TAG
     name: payment
     ports:
     - containerPort: 8080
