--- a/_infra/K8s/manifests/shipping-pod.yaml
+++ b/_infra/K8s/manifests/shipping-pod.yaml
@@ -41,7 +41,7 @@ spec:
       valueFrom:
         fieldRef:
           fieldPath: metadata.namespace
-    image: $REPO/rs-shipping:$TAG
+    image: $GITHUB_USER/rs-shipping:$TAG
     name: shipping
     ports:
     - containerPort: 8080
