--- a/_infra/K8s/manifests/user-pod.yaml
+++ b/_infra/K8s/manifests/user-pod.yaml
@@ -41,7 +41,7 @@ spec:
       valueFrom:
         fieldRef:
           fieldPath: metadata.namespace
-    image: $REPO/rs-user:$TAG
+    image: $GITHUB_USER/rs-user:$TAG
     name: user
     ports:
     - containerPort: 8080
