--- a/_infra/K8s/manifests/web-pod.yaml
+++ b/_infra/K8s/manifests/web-pod.yaml
@@ -45,7 +45,7 @@ spec:
       valueFrom:
         fieldRef:
           fieldPath: metadata.namespace
-    image: $REPO/rs-web:$TAG
+    image: $GITHUB_USER/rs-web:$TAG
     name: web
     ports:
     - containerPort: 8080
