--- a/newrelic-integrations/newrelic-infrastructure-k8s-latest.yaml
+++ b/newrelic-integrations/newrelic-infrastructure-k8s-latest.yaml
@@ -46,7 +46,7 @@ spec:
     matchLabels:
       name: newrelic-infra
   updateStrategy:
-      type: RollingUpdate # Only supported in Kubernetes version 1.6 or later.
+      type: RollingUpdate
   template:
     metadata:
       labels:
@@ -61,7 +61,7 @@ spec:
       dnsPolicy: ClusterFirstWithHostNet
       containers:
         - name: newrelic-infra
-          image: newrelic/infrastructure-k8s:1.6.0
+          image: newrelic/infrastructure-k8s:latest
           resources:
             limits:
               memory: 150M
@@ -76,9 +76,9 @@ spec:
               name: host-docker-socket
           env:
             - name: "CLUSTER_NAME"
-              value: "<YOUR_CLUSTER_NAME>"
+              value: "$CLUSTER_NAME"
             - name: "NRIA_LICENSE_KEY"
-              value: "<YOUR_LICENSE_KEY>"
+              value: "$NEW_RELIC_LICENSE_KEY"
             - name: "NRIA_VERBOSE"
               value: "0"
            # - name: "CADVISOR_PORT" # Enable direct connection to cAdvisor by specifying the port. Needed for Kubernetes versions prior to 1.7.6.
@@ -96,7 +96,7 @@ spec:
                   apiVersion: "v1"
                   fieldPath: "spec.nodeName"
             - name: "NRIA_CUSTOM_ATTRIBUTES"
-              value: '{"clusterName":"$(CLUSTER_NAME)"}'
+              value: '{"clusterName":"$CLUSTER_NAME","datacenter":"$DATACENTER"}'
             - name: "NRIA_PASSTHROUGH_ENVIRONMENT"
               value: "KUBERNETES_SERVICE_HOST,KUBERNETES_SERVICE_PORT,CLUSTER_NAME,CADVISOR_PORT,NRK8S_NODE_NAME,KUBE_STATE_METRICS_URL"
       volumes:
