--- a/.env.template
+++ b/.env.template
@@ -1,9 +1,9 @@
 # environment file for docker-compose
-GITHUB_USER=
-GITHUB_REPO=
+GITHUB_USER=thywoof
+GITHUB_REPO=robot-shop
 TAG=latest
 DATACENTER=local
-CLUSTER_NAME=
+CLUSTER_NAME=local
 NEW_RELIC_LICENSE_KEY=
 NEW_RELIC_BROWSER_APPLICATION_ID=
 NEW_RELIC_BROWSER_LICENSE_KEY=
